--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,9 +6,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - SERVICE_CALL_RETRY_COUNT=3
-      - MONGODB_CONNECTION_URI=mongodb://mongodb1:27017,mongodb2:27017,mongodb3:27017/saint?replicaSet=rsmongo
-      - MONGODB_USER_DB_NAME=saint
-      - MONGODB_USER_COLLECTION_NAME=users
+      - OPENSEARCH_NODE_URIS=https://opensearch-master-node:9200,https://opensearch-backup-node:9200
+      - OPENSEARCH_USER_INDEX_NAME=users
     ports:
       - 5190:80
       - 7076:443
