Fixed get by id.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,3 +14,8 @@ services:
     volumes:
       - ~/.aspnet/https:/root/.aspnet/https:ro
       - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
+
+networks:
+  default:
+    external: true
+    name: local-network
