--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ~/.aspnet/https:/root/.aspnet/https:ro
       - ~/.microsoft/usersecrets:/root/.microsoft/usersecrets:ro
+    restart: always
 
 networks:
   default:
