Added cache layer and base CRUD functionality.

--- a/user.api/user.api.csproj
+++ b/user.api/user.api.csproj
@@ -60,10 +60,10 @@
     <None Remove="Common\Models\Message\" />
     <None Remove="Application\" />
     <None Remove="Application\Services\" />
-    <None Remove="Application\Services\User\" />
-    <None Remove="Application\Services\User\Crud\" />
     <None Remove="Common\Models\Message\Requests\" />
     <None Remove="Common\Models\Message\Messages\" />
+    <None Remove="Application\Services\Cache\" />
+    <None Remove="Application\Services\Crud\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\Models\Configuration\" />
@@ -86,9 +86,9 @@
     <Folder Include="Common\Models\Message\" />
     <Folder Include="Application\" />
     <Folder Include="Application\Services\" />
-    <Folder Include="Application\Services\User\" />
-    <Folder Include="Application\Services\User\Crud\" />
     <Folder Include="Common\Models\Message\Requests\" />
     <Folder Include="Common\Models\Message\Messages\" />
+    <Folder Include="Application\Services\Cache\" />
+    <Folder Include="Application\Services\Crud\" />
   </ItemGroup>
 </Project>
