--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -20,6 +20,7 @@ services:
       - ASPNETCORE_URLS=${ASPNETCORE_URLS}
       - AUTH_ISSUER=${AUTH_ISSUER}
       - AUTH_AUDIENCE=${AUTH_AUDIENCE}
+      - DISABLE_AUTH=${DISABLE_AUTH}
       - RABBITMQ_HOST=${RABBITMQ_HOST}
       - RABBITMQ_VIRTUAL_HOST=${RABBITMQ_VIRTUAL_HOST}
       - RABBITMQ_PORT=${RABBITMQ_PORT}
