--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@swc/core": "^1.3.107",
     "@types/aws-lambda": "^8.10.133",
     "@types/node": "^20.11.10",
+    "@types/uuid": "^9.0.8",
     "aws-cdk-lib": "^2.124.0",
+    "aws-sdk": "^2.1607.0",
     "constructs": "^10.2.59",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.20.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1"
   },
   "dependencies": {},
   "author": "",
