WIP: Updated Docker script

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A REST API for User CRUD operations written in .Net with an ElasticSearch backend",
   "main": "index.js",
   "scripts": {
+    "aws:login": "npm run cdk bootstrap aws://000000000000/us-east-1",
     "cdk": "cdklocal",
     "cdk:synth": "cd cdk && cdklocal synth",
     "cdk:synth:write": "cd cdk && cdklocal synth > cdk.out/template.yml",
     "cdk:deploy": "cd cdk && cdk deploy",
     "clean": "rm -rf cdk/cdk.out/* node_modules/* node_modules/.bin node_modules/.package-lock.json .cache",
     "clean:cdk": "rm -rf cdk/cdk.out/asset.*",
+    "publish:image": "npm run aws:login && ts-node ./scripts/publish-to-docker-registry.ts",
     "tsc": "tsc"
   },
   "devDependencies": {
