--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "skipLibCheck": true
   },
   "exclude": ["node_modules", "cdk/cdk.out", "bin", ".vs", "obj", "user.api"],
-  "include": ["cdk", "*"]
+  "include": ["cdk", "scripts", "*"]
 }
