--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cdk:deploy": "cd cdk && cdk deploy",
     "clean": "rm -rf cdk/cdk.out/* node_modules/* node_modules/.bin node_modules/.package-lock.json .cache",
     "clean:cdk": "rm -rf cdk/cdk.out/asset.*",
-    "publish:image": "npm run aws:login && node ./scripts/publish-to-docker-registry.js",
+    "publish:image": "node ./scripts/publish-to-docker-registry.js",
     "tsc": "tsc"
   },
   "devDependencies": {
@@ -19,15 +19,13 @@
     "@swc/core": "^1.3.107",
     "@types/aws-lambda": "^8.10.133",
     "@types/node": "^20.11.10",
-    "@types/uuid": "^9.0.8",
     "aws-cdk-lib": "^2.124.0",
     "aws-sdk": "^2.1607.0",
     "constructs": "^10.2.59",
     "dotenv": "^16.4.5",
     "esbuild": "^0.20.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "uuid": "^9.0.1"
+    "typescript": "^5.3.3"
   },
   "dependencies": {},
   "author": "",
